[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/BattleScene.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/battle/grounds/arena_test.png" type="Texture" id=2]

[node name="TestScene" type="YSort"]
script = ExtResource( 1 )

[node name="Arena" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( -260, 0 )
texture = ExtResource( 2 )

[node name="Arena2" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 552, 0 )
texture = ExtResource( 2 )

[node name="Arena3" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 1360, 0 )
texture = ExtResource( 2 )

[node name="CameraHandler" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraHandler"]
current = true
zoom = Vector2( 1.3, 1.3 )

[node name="Tween" type="Tween" parent="CameraHandler"]

[node name="ShakeFrequency" type="Timer" parent="CameraHandler"]
wait_time = 0.06

[node name="ShakeDuration" type="Timer" parent="CameraHandler"]
wait_time = 0.4

[node name="Entities" type="YSort" parent="."]

[node name="Bullets" type="YSort" parent="."]

[node name="Effects" type="YSort" parent="."]

[connection signal="timeout" from="CameraHandler/ShakeFrequency" to="." method="_on_ShakeFrequency_timeout"]
[connection signal="timeout" from="CameraHandler/ShakeDuration" to="." method="_on_ShakeDuration_timeout"]
